force-app/main/default/objects/Entry__c/Entry__c.object-meta.xml
<CustomObject>
    <label>Entry</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>