force-app/main/default/objects/Entry__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>This field was create for SCCE application and to store the student DOB</description>
    <inlineHelpText>Please enter your date of birth</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>