force-app/main/default/objects/Entry__c/fields/Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>Entry_Name__c</fullName>
    <label>Entry Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>