force-app/main/default/objects/Entry__c/fields/Student_Address__c.field-meta.xml
<CustomField>
    <fullName>Student_Address__c</fullName>
    <label>Student Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>